--- a/main.html
+++ b/main.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
 
-        
+<table>
+  <thead>
+    <tr>
+      <th>NAME</th>
+      <th>KELS</th>
+      <th>SAVED</th>
+      <th>DEATHS</th>
+	   <th>WIN</th>
+		<th>FAIL</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Hackerman</td>
+      <td>10</td>
+      <td>0</td>
+      <td>1</td>
+		<td>0</td>
+		<td>0</td>
+    </tr>
+    <tr>
+      <td>Andrews</td>
+      <td>18</td>
+      <td>10</td>
+      <td>8</td>
+		<td>10</td>
+		<td>6</td>
+    </tr>
+    <tr>
+      <td>cool Doggo</td>
+      <td>13</td>
+      <td>4</td>
+      <td>8</td>
+		<td>7</td>
+		<td>1</td>
+    </tr>
+    <tr>
+      <td>Strawberry</td>
+      <td>30</td>
+      <td>25</td>
+      <td>5</td>
+		<td>13</td>
+		<td>16</td>
+    </tr>
+  </tbody>
+</table>
+
 </body>
 </html>
